--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 services:
   backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: tpu-practice-searcher:latest
     container_name: tpu-practice-searcher-container
     ports:
