--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,10 @@ on:
 jobs:
   deploy:
     runs-on: self-hosted
+    env:
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      JWT_SECRET_TOKEN: ${{ secrets.JWT_SECRET_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
