fix: new bot token

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     container_name: tpu-practice-searcher-container
     environment:
       JWT_SECRET_TOKEN: "JWT_SECRET_TOKEN"
-      TELEGRAM_BOT_TOKEN: "TELEGRAM_BOT_TOKEN"
+      TELEGRAM_BOT_TOKEN: "7988184499:AAFo-ojimnv_9n3TMlzKJEmHqNXrUdZ8Yds"
     ports:
       - "8000:8000"
     depends_on:
