--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,8 +2,8 @@ env: "local"
 storage:
   host: "localhost"
   port: 5432
-  user: "postgres"
-  password: "postgres"
+  user: "notdefaultuser"
+  password: "notdefaultuserpassword"
   dbname: "db"
 http_server:
   address: "0.0.0.0"
