--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     image: tpu-practice-searcher:latest
     container_name: tpu-practice-searcher-container
+    networks:
+      - prod_net
     environment:
       JWT_SECRET_TOKEN: "JWT_SECRET_TOKEN"
       TELEGRAM_BOT_TOKEN: "7650435197:AAFWerS9j6ikk2MFlQ6raTgRFin2BL3FbQ0"
@@ -18,6 +20,8 @@ services:
   db:
     image: postgres:latest
     container_name: postgres-container
+    networks:
+      - prod_net
     environment:
       - POSTGRES_USER=notdefaultuser
       - POSTGRES_PASSWORD=notdefaultuserpassword
@@ -29,3 +33,5 @@ services:
     restart: always
 volumes:
   postgres_data:
+networks:
+  prod_net:
