--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     command: "./tpu-practice-searcher"
 
   devdb:
-    image: postgres:latest
+    image: postgres:16.0
     container_name: dev-postgres-container
     networks:
       - dev_net
