--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,7 @@ storage:
   port: 5432
   user: "notdefaultuser"
   password: "notdefaultuserpassword"
-  dbname: "devdb"
+  dbname: "db"
 http_server:
   address: "0.0.0.0"
   port: 8000
