--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,10 +24,10 @@ services:
     environment:
       DB_HOST: "db"
       DB_PORT: "5432"
-      DB_NAME: "tpu_practice_searcher_db"
-      DB_USER: "not_default_user"
-      DB_PASSWORD: "not_default_user_password"
-      TELEGRAM_BOT_TOKEN: "7648731394:AAGswOBGquR84vBNF6oQxOhx6Ki2KHetxMA"
+      DB_NAME: "db"
+      DB_USER: "notdefaultuser"
+      DB_PASSWORD: "notdefaultuserpassword"
+      TELEGRAM_BOT_TOKEN: "7650435197:AAFWerS9j6ikk2MFlQ6raTgRFin2BL3FbQ0"
     depends_on:
       - db
 
@@ -43,10 +43,10 @@ services:
     environment:
       DB_HOST: "db"
       DB_PORT: "5432"
-      DB_NAME: "tpu_practice_searcher_db"
-      DB_USER: "not_default_user"
-      DB_PASSWORD: "not_default_user_password"
-      TELEGRAM_BOT_TOKEN: "7648731394:AAGswOBGquR84vBNF6oQxOhx6Ki2KHetxMA"
+      DB_NAME: "db"
+      DB_USER: "notdefaultuser"
+      DB_PASSWORD: "notdefaultuserpassword"
+      TELEGRAM_BOT_TOKEN: "7650435197:AAFWerS9j6ikk2MFlQ6raTgRFin2BL3FbQ0"
       JWT_SECRET_TOKEN: "JWT_SECRET_TOKEN"
     ports:
       - "8000:8000"
@@ -60,9 +60,9 @@ services:
     networks:
       - prod_net
     environment:
-      POSTGRES_USER: "not_default_user"
-      POSTGRES_PASSWORD: "not_default_user_password"
-      POSTGRES_DB: "tpu_practice_searcher_db"
+      POSTGRES_USER: "notdefaultuser"
+      POSTGRES_PASSWORD: "notdefaultuserpassword"
+      POSTGRES_DB: "db"
     ports:
       - "5432:5432"
     volumes:
