--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
+  # Билд фронтенда
   frontend:
     image: node:20-alpine
+    profiles: ["build-only"]
     working_dir: /app
     volumes:
       - ./frontend:/src:ro
@@ -12,6 +14,7 @@ services:
         npm run build
       "
     restart: "no"
+  # Билд и запуск телеграм-бота
   bot:
     restart: always
     build:
@@ -21,16 +24,12 @@ services:
     container_name: tpu-practice-searcher-bot-container
     networks:
       - prod_net
+    env_file: .env
     environment:
-      DB_HOST: "db"
-      DB_PORT: "5432"
-      DB_NAME: "db"
-      DB_USER: "notdefaultuser"
-      DB_PASSWORD: "notdefaultuserpassword"
-      TELEGRAM_BOT_TOKEN: "7650435197:AAFWerS9j6ikk2MFlQ6raTgRFin2BL3FbQ0"
+      DB_HOST: "db"   # Сервис с базой данных
     depends_on:
       - db
-
+  # Билд и запуск бэкенда
   backend:
     restart: always
     build:
@@ -40,33 +39,25 @@ services:
     container_name: tpu-practice-searcher-container
     networks:
       - prod_net
+    env_file: .env
     environment:
-      DB_HOST: "db"
-      DB_PORT: "5432"
-      DB_NAME: "db"
-      DB_USER: "notdefaultuser"
-      DB_PASSWORD: "notdefaultuserpassword"
-      TELEGRAM_BOT_TOKEN: "7650435197:AAFWerS9j6ikk2MFlQ6raTgRFin2BL3FbQ0"
-      JWT_SECRET_TOKEN: "JWT_SECRET_TOKEN"
+      DB_HOST: "db"   # Сервис с базой данных
     ports:
-      - "8000:8000"
+      - "8000:8000"   # Порт хоста : порт контейнера
     depends_on:
       - db
     command: "./tpu-practice-searcher"
-
+  # Билд и запуск базы данных
   db:
     image: postgres:16.0
     container_name: postgres-container
     networks:
       - prod_net
-    environment:
-      POSTGRES_USER: "notdefaultuser"
-      POSTGRES_PASSWORD: "notdefaultuserpassword"
-      POSTGRES_DB: "db"
+    env_file: .env
     ports:
-      - "5432:5432"
+      - "5432:5432"   # Порт хоста : порт контейнера
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data   # Персистентность данных
     restart: always
 volumes:
   postgres_data:
